# Predictive-Market-Synthesis-Engine-

./: .gitignore  README.md  ROADMAP.md  bar_pipeline.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
arena/: glyph_arena_schema.json
imm_adapters/: __init__.py  csv_stream.py  truthlock.py
imm_engine/: __init__.py  synthesis.py
imm_hud/: __init__.py  contracts.py
imm_proof/: __init__.py
proof/: TradeObligations.lean  verifier.py
scripts/: run_backtest.py  run_mc.py  smoke_run.py
sim/: __init__.py  engine.py  metrics.py  monte_carlo.py
src/nt8-adapter/: BarExportEmitter.cs  EntropyBar.cs  EntropyEchoDriftSentinel_Adapter.cs  IMMAdapterStrategyBase.cs  IMMBridgeClient.cs  IMMConfig.cs  ProofBridgeLogger.cs  README.md
strategies/: __init__.py  base.py  sentient_spire_v12.py
tests/: test_engine_smoke.py
tests/data/: sample_bars.csv
