[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imm-synthesis-engine"
version = "0.1.0"
description = "Unified market cognition: entropy × topology × quantum-state (mock) × global workspace."
authors = [{ name = "Derek + Monday", email = "none@example.com" }]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.8",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.3",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["imm_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["imm_adapters", "imm_engine", "imm_hud", "imm_proof"]

[tool.black]
line-length = 100
target-version = ["py311"]
